<resources>
    <string name="app_name">Calculat</string>
    <string name="back">Back</string>
    <string name="mortgage_n_repayment_calculator">Mortgage\n Repayment Calculator</string>
    <string name="how_much_to_borrow">How much to borrow</string>
    <string name="term_years">Term (years)</string>
    <string name="interest_rate">Interest rate</string>
    <string name="calculate">Calculate</string>
    <string name="mortgage_amount">Mortgage amount</string>
    <string name="term_length">Term (length)</string>
    <string name="total_interest_to_pay">Total interest to pay</string>
    <string name="mortgage_balance_over_term">Mortgage balance over term</string>
    <string name="monthly_repayment">Monthly repayment</string>
    <string name="divider">Divider</string>
    <string name="compound_interest_n_calculator">Compound Interest\n Calculator</string>
    <string name="initial_lump_sum">Initial lump sum</string>
    <string name="monthly_deposit">Monthly deposit</string>
    <string name="average_annual_interest">Average annual interest (%)</string>
    <string name="initial_contribution">Initial contribution</string>
    <string name="monthly_contribution">Monthly contribution</string>
    <string name="annual_interest">Annual interest</string>
    <string name="term">Term</string>
    <string name="total_interest_earned">Total interest earned</string>
    <string name="ending_balance">Ending balance</string>
    <string name="annual_balance_over_term">Annual balance over term</string>
    <string name="saved_results">Saved results</string>
    <string name="more">More</string>
    <string name="all_calculators">All Calculators</string>
    <string name="most_used_at_the_top">Most used at the top</string>
    <string name="mortgage_n_loan_calculator">Mortgage\n Loan Calculator</string>
    <string name="monthly_payment">Monthly payment</string>
    <string name="maximum_borrow_amount">Maximum borrow amount</string>
    <string name="net_worth_calculator">Net Worth Calculator</string>
    <string name="assets">Assets</string>
    <string name="home_equity">Home equity</string>
    <string name="philjay_mpandroidchart">PhilJay/MPAndroidChart</string>
    <string name="cash_savings">Cash savings</string>
    <string name="investments">Investments</string>
    <string name="vehicle_s">Vehicle(s)</string>
    <string name="other_assets">Other assets</string>
    <string name="liabilities">Liabilities</string>
    <string name="credit_card_debt">Credit card debt</string>
    <string name="overdrafts">Overdrafts</string>
    <string name="student_loans">Student loans</string>
    <string name="vehicle_loans">Vehicle loans</string>
    <string name="other_liabilities">Other liabilities</string>
    <string name="net_worth">Net worth</string>
    <string name="percentages_calculator">Percentages Calculator</string>
    <string name="licensed_apache_2_0">Licensed under the Apache License 2.0</string>
    <string name="of">% of</string>
    <string name="is">is</string>
    <string name="_0">0</string>
    <string name="as_a_of">as a % of</string>
    <string name="_0_percent">0%</string>
    <string name="to">to</string>
    <string name="calculat_logo">Calculat Logo</string>
    <string name="version_by_ss">v%1$s, made by Spudg Studios</string>
    <string name="copyright">Copyright © 2021 Spudg Studios</string>
    <string name="all_rights_reserved">All rights reserved. By using this application, you agree that the creator of this application is not responsible for any losses or damages.</string>
    <string name="google_material_design_icons">google/material-design-icons</string>
    <string name="steve_matteson_open_sans_light_font">Steve Matteson / Open Sans Light font</string>
    <string name="about_calculat">About Calculat</string>
    <string name="calculat">Calculat</string>
    <string name="v1_0_0_made_by_spudg_studios">v1.0.0, made by Spudg Studios</string>
    <string name="calculat_about_text">Calculat is a free library of financial calculators designed to simplify the calculation of often complex loans, mortgages, compound returns and more. \n\nSpudg Studios is currently a one-man development studio and this is an early version of the application, so if you have any suggestions for new calculators that could be added or you\'ve found a bug, please send an email below!</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="rate_on_play_store">Rate on Play Store</string>
    <string name="send_an_email">Send an email</string>
    <string name="welcome">Welcome!</string>
    <string name="calculators_listed_below">Calculators listed below</string>
    <string name="about">About</string>
    <string name="financial_independence_calculator">Financial Independence Calculator</string>
</resources>