<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MortgageLoanCalculator">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backToCalcListFromMortLoanCalc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/back_btn_padding"
            android:contentDescription="@string/back"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/open_sans_light"
            android:gravity="center"
            android:text="@string/mortgage_n_loan_calculator"
            android:textColor="@android:color/black"
            android:textSize="26sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etRepaymentLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRepayment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/open_sans_light"
                    android:hint="@string/monthly_repayment"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etTermLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTerm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/open_sans_light"
                    android:hint="@string/term_years"
                    android:inputType="number"
                    android:maxLength="5"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etInterestLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etInterest"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/open_sans_light"
                    android:hint="@string/interest_rate"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/btnCalculate"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/calculate_btn_background"
                android:fontFamily="@font/open_sans_light"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/calculate"
                android:textColor="@color/colorAccent" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/divider"
                android:contentDescription="@string/divider" />

            <LinearLayout
                android:id="@+id/calcResultsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/monthly_payment" />

                <TextView
                    android:id="@+id/maxRepayment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/open_sans_light"
                    android:textSize="24sp"
                    tools:text="£2,250" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/term_length" />

                <TextView
                    android:id="@+id/term"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/open_sans_light"
                    android:textSize="24sp"
                    tools:text="25 years" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/interest_rate" />

                <TextView
                    android:id="@+id/interestRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/open_sans_light"
                    android:textSize="24sp"
                    tools:text="2.15%" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/total_interest_to_pay" />

                <TextView
                    android:id="@+id/totalInterest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/open_sans_light"
                    android:textSize="24sp"
                    tools:text="£57,928" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/maximum_borrow_amount" />

                <TextView
                    android:id="@+id/maxToBorrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="40dp"
                    android:fontFamily="@font/open_sans_light"
                    android:textSize="24sp"
                    tools:text="£500,000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_light"
                    android:gravity="center_horizontal"
                    android:text="@string/mortgage_balance_over_term"
                    android:textSize="20sp" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/leftToPayLineChart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="50dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>